src/Hermes.Native.Linux/Exports.h

// ============================================================================
// Dialog Operations
// ============================================================================

/// Show a file open dialog. Returns array of paths (caller must free with Hermes_FreeStringArray)
char** Hermes_Dialog_ShowOpenFile(void* parentWindow, const char* title, const char* defaultPath,
                                   bool multiSelect, const char** filters,
                                   int filterCount, int* resultCount);
/// Show a folder open dialog. Returns array of paths (caller must free with Hermes_FreeStringArray)
char** Hermes_Dialog_ShowOpenFolder(void* parentWindow, const char* title, const char* defaultPath,
                                     bool multiSelect, int* resultCount);
/// Show a file save dialog. Returns path (caller must free with Hermes_Free)
char* Hermes_Dialog_ShowSaveFile(void* parentWindow, const char* title, const char* defaultPath,
                                  const char** filters, int filterCount,
                                  const char* defaultFileName);
/// Show a message dialog. Returns DialogResult value.
int Hermes_Dialog_ShowMessage(void* parentWindow, const char* title, const char* message,
                               int buttons, int icon);
/// Hide the status icon from the system tray
void Hermes_StatusIcon_Hide(void* statusIcon);
/// Set the icon from a file path
void Hermes_StatusIcon_SetIconFromPath(void* statusIcon, const char* filePath);
/// Set the icon from raw image data
void Hermes_StatusIcon_SetIconFromData(void* statusIcon, const void* data, int length);
/// Set the tooltip (title) of the status icon
void Hermes_StatusIcon_SetTooltip(void* statusIcon, const char* tooltip);
/// Add a menu item to the status icon menu
void Hermes_StatusIcon_AddItem(void* statusIcon, const char* itemId, const char* label);
/// Add a separator to the status icon menu
void Hermes_StatusIcon_AddSeparator(void* statusIcon);
/// Remove a menu item by ID
void Hermes_StatusIcon_RemoveItem(void* statusIcon, const char* itemId);
/// Clear all menu items
void Hermes_StatusIcon_Clear(void* statusIcon);
/// Set whether a menu item is enabled
void Hermes_StatusIcon_SetItemEnabled(void* statusIcon, const char* itemId, bool enabled);
/// Set whether a menu item is checked
void Hermes_StatusIcon_SetItemChecked(void* statusIcon, const char* itemId, bool checked);
/// Set the label of a menu item
void Hermes_StatusIcon_SetItemLabel(void* statusIcon, const char* itemId, const char* label);
/// Add a submenu to the status icon menu
void Hermes_StatusIcon_AddSubmenu(void* statusIcon, const char* submenuId, const char* label);
/// Add an item to a submenu
void Hermes_StatusIcon_AddSubmenuItem(void* statusIcon, const char* submenuId,
                                      const char* itemId, const char* label);
/// Add a separator to a submenu
void Hermes_StatusIcon_AddSubmenuSeparator(void* statusIcon, const char* submenuId);
/// Clear all items from a submenu
void Hermes_StatusIcon_ClearSubmenu(void* statusIcon, const char* submenuId);
// ============================================================================
// Memory Management
// ============================================================================

/// Free a single pointer allocated by Hermes
void Hermes_Free(void* ptr);
/// Free an array of strings allocated by Hermes
void Hermes_FreeStringArray(char** array, int count);