src/Hermes/Platforms/Linux/LinuxNativeImports.cs


    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_Hide")]
    internal static partial void StatusIconHide(IntPtr statusIcon);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetIconFromPath", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconSetIconFromPath(IntPtr statusIcon, string filePath);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetIconFromData")]
    internal static partial void StatusIconSetIconFromData(IntPtr statusIcon, IntPtr data, int length);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetTooltip", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconSetTooltip(IntPtr statusIcon, string tooltip);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_AddItem", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconAddItem(IntPtr statusIcon, string itemId, string label);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_AddSeparator")]
    internal static partial void StatusIconAddSeparator(IntPtr statusIcon);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_RemoveItem", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconRemoveItem(IntPtr statusIcon, string itemId);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_Clear")]
    internal static partial void StatusIconClear(IntPtr statusIcon);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetItemEnabled", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconSetItemEnabled(IntPtr statusIcon, string itemId,
                                                          [MarshalAs(UnmanagedType.U1)] bool enabled);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetItemChecked", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconSetItemChecked(IntPtr statusIcon, string itemId,
                                                          [MarshalAs(UnmanagedType.U1)] bool isChecked);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_SetItemLabel", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconSetItemLabel(IntPtr statusIcon, string itemId, string label);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_AddSubmenu", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconAddSubmenu(IntPtr statusIcon, string submenuId, string label);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_AddSubmenuItem", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconAddSubmenuItem(IntPtr statusIcon, string submenuId,
                                                          string itemId, string label);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_AddSubmenuSeparator", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconAddSubmenuSeparator(IntPtr statusIcon, string submenuId);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_StatusIcon_ClearSubmenu", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void StatusIconClearSubmenu(IntPtr statusIcon, string submenuId);

    #endregion

    #region Dialog Operations

    [LibraryImport(LibraryName, EntryPoint = "Hermes_Dialog_ShowOpenFile", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr DialogShowOpenFile(IntPtr parentWindow, string title, string? defaultPath,
                                                      [MarshalAs(UnmanagedType.U1)] bool multiSelect,
                                                      IntPtr filters, int filterCount, out int resultCount);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_Dialog_ShowOpenFolder", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr DialogShowOpenFolder(IntPtr parentWindow, string title, string? defaultPath,
                                                        [MarshalAs(UnmanagedType.U1)] bool multiSelect,
                                                        out int resultCount);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_Dialog_ShowSaveFile", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr DialogShowSaveFile(IntPtr parentWindow, string title, string? defaultPath,
                                                      IntPtr filters, int filterCount, string? defaultFileName);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_Dialog_ShowMessage", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int DialogShowMessage(IntPtr parentWindow, string title, string message, int buttons, int icon);

    #endregion

    #region Memory Management

    [LibraryImport(LibraryName, EntryPoint = "Hermes_Free")]
    internal static partial void Free(IntPtr ptr);

    [LibraryImport(LibraryName, EntryPoint = "Hermes_FreeStringArray")]
    internal static partial void FreeStringArray(IntPtr array, int count);

    #endregion
}
